Ensure resume restores saved arguments

--- a/templates/systemd/vps-harden-continue.service
+++ b/templates/systemd/vps-harden-continue.service
@@ -5,7 +5,7 @@ After=network.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/env bash -c 'set -euo pipefail; args=$(cat __PENDING_ARGS_FILE__); rm -f __PENDING_ARGS_FILE__; eval "set -- ${args}"; exec __INSTALL_PREFIX__/harden --resume "$@"'
+ExecStart=/usr/bin/env bash -c 'set -euo pipefail; args=$(cat __PENDING_ARGS_FILE__); eval "set -- ${args}"; exec __INSTALL_PREFIX__/harden --resume "$@"'
 RemainAfterExit=no
 
 [Install]
